# Kaarigars

./: .gitignore  CONTEXT_DOCUMENT.txt  Readme.md  Workflow.md  rules.txt
Person_b/: .gitignore  README.md  openenv.yaml  requirements.txt
Person_b/baselines/: __init__.py  greedy_agent.py  run_baseline.py
Person_b/configs/: easy.yaml
Person_b/rescue_env/: __init__.py
Person_b/rescue_env/scoring/: __init__.py  types.py
Person_b/rescue_env/tasks/: __init__.py  base_task.py  (+2 more)
person A/: README.md  openenv.yaml  requirements.txt
person A/rescue_env/: __init__.py
rescue-robot-env/: .dockerignore  .env.example  .gitignore  Dockerfile  PERSON_B_PLAN.md  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
rescue-robot-env/baselines/: astar_agent.py  random_agent.py  run_baseline.py
rescue-robot-env/configs/: hard.yaml  medium.yaml
rescue-robot-env/rescue_env/core/: environment.py
rescue-robot-env/rescue_env/models/: observations.py  reward.py  robot.py  state.py  victim.py
rescue-robot-env/rescue_env/robot/: controller.py
rescue-robot-env/rescue_env/robot/sensors/: gas_sensor.py  lidar.py
rescue-robot-env/rescue_env/scoring/: __init__.py  grader.py  penalties.py  reward_calculator.py
rescue-robot-env/rescue_env/scoring/metrics/: __init__.py  decision.py
rescue-robot-env/rescue_env/tasks/: easy_task.py  hard_task.py
rescue-robot-env/scripts/: llm_env_smoke_test.py  pre_submit_local_check.py  validate-submission.sh
rescue-robot-env/server/: app.py
rescue-robot-env/tests/: test_env_integration.py  test_scoring.py
(+21 files in other folders)
