[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rescue-robot-openenv"
version = "0.1.0"
description = "OpenEnv earthquake rescue environment with typed APIs, task graders, and baseline inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Team Kaarigars" }
]
dependencies = [
  "numpy>=1.24.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "openenv-core>=0.2.0",
  "openai>=1.40.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rescue_env*"]
